Lot of changes for yoga

--- a/roles/firefox/templates/firefox.desktop.j2
+++ b/roles/firefox/templates/firefox.desktop.j2
@@ -1,6 +1,12 @@
 [Desktop Entry]
 Version=1.0
+{% if channel == 'latest' %}
 Name=Firefox
+{% elif channel == 'beta-latest' %}
+Name=Firefox Beta
+{% elif channel == 'devedition-latest' %}
+Name=Firefox Dev
+{% endif %}
 GenericName=Web Browser
 GenericName[ca]=Navegador web
 GenericName[cs]=Webový prohlížeč
@@ -42,7 +48,7 @@ Comment[pt]=Navegue na Internet
 Comment[pt_BR]=Navegue na Internet
 Comment[sk]=Prehliadanie internetu
 Comment[sv]=Surfa på webben
-Exec={{ install_path }}/firefox %u
+Exec=env MOZ_USE_XINPUT2=1 {{ install_path }}/firefox %u
 Icon={{ install_path }}/browser/chrome/icons/default/default128.png
 Terminal=false
 Type=Application
@@ -56,9 +62,9 @@ X-Desktop-File-Install-Version=0.22
 
 [Desktop Action new-window]
 Name=Open a New Window
-Exec={{ install_path }}/firefox %u
+Exec=env MOZ_USE_XINPUT2=1 {{ install_path }}/firefox %u
 
 [Desktop Action new-private-window]
 Name=Open a New Private Window
-Exec={{ install_path }}/firefox --private-window %u
+Exec=env MOZ_USE_XINPUT2=1 {{ install_path }}/firefox --private-window %u
 
