--- a/roles/webserver/templates/vhosts/zzzzzzz-dev.local.conf.j2
+++ b/roles/webserver/templates/vhosts/zzzzzzz-dev.local.conf.j2
@@ -2,7 +2,7 @@
         ServerAdmin hostmaster@remyj.fr
         ServerName dev.local
         ServerAlias *.dev.local
-        VirtualDocumentRoot /home/www/%1
+        VirtualDocumentRoot {{ httpd_data_dir }}/%1
         <Directory />
                 Options FollowSymLinks Indexes
                 AllowOverride All
